feat(step0): 기본 코드 준비 (#339)